Fixed overflowing in suggestions

--- a/client/src/components/guestLinkPageOptions/Options.css
+++ b/client/src/components/guestLinkPageOptions/Options.css
@@ -9,5 +9,11 @@
  flex-direction: column;
  align-items: center;
  justify-content: center;
- width:fit-content
+ width: 337px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 337px;
 }
