--- a/client/src/pages/user/dashboard.css
+++ b/client/src/pages/user/dashboard.css
@@ -43,6 +43,7 @@ div.wannago-cards-container {
   max-width: 80%;
   margin: 0 auto; 
   margin-top: 2rem;
+  margin-bottom: 2rem;
   gap: 2rem;
   justify-items: center;
 }
