--- a/client/src/pages/wannago/wannagoStats.css
+++ b/client/src/pages/wannago/wannagoStats.css
@@ -31,6 +31,7 @@ section.info-container {
   align-items: center;
   margin-left: 23.5rem;
   margin-top: 2rem;
+  overflow: auto;
 }
 
 article.stats-container {
@@ -109,12 +110,13 @@ div.suggestions-container {
   gap: 10px;
 }
 
-.message {
+div.message {
   border: 1px solid rgb(241, 138, 203);
   border-radius: 10px;
   font-size: larger;
   padding: 0px 10px;
   width: 20rem;
+   overflow-wrap: break-word;
 }
 
 @media (max-width: 1100px) {
@@ -139,6 +141,7 @@ div.suggestions-container {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow-y: auto; 
   }
 
   section.info-container {
@@ -146,6 +149,9 @@ div.suggestions-container {
   flex-direction: column;
   align-items: center;
   margin-left: 0;
+  height: auto;
+  margin-bottom: 6rem;
+  overflow-y: auto; 
 }
 
 aside.sidebar-info::after {
